Use SwitchUserFilter for user impersonation
This is the way that is recommended by Vaadin.
https://vaadin.com/docs/latest/flow/security/enabling-security#spring-impersonation-with-vaadin